# cinema_univer

./: .gitignore  README.md  docker-compose.yaml
backend/: .gitignore  main.py  need.env  pyproject.toml
backend/app/api/: __init__.py  core.py  datamodels.py  security.py
backend/app/api/routers/: __init__.py  favorite_router.py  hall_router.py  include.py  movie_router.py  session_router.py  ticket_router.py  user_router.py
backend/app/database/: core.py  database.py  models.py  seed.py
backend/app/database/methods/: __init__.py  base.py  favorite_methods.py  hall_methods.py  include.py  movie_methods.py  session_methods.py  ticket_methods.py  user_methods.py
frontend/: .gitignore  package-lock.json
frontend/public/: index.html
frontend/src/: App.vue  styles.css
frontend/src/components/: AppHeader.vue  MovieCard.vue
frontend/src/constants/: securityQuestions.js
frontend/src/data/: movies.js
frontend/src/router/: index.js
frontend/src/services/: api.js
frontend/src/store/: session.js
frontend/src/utils/: formatters.js  passwordValidation.js
frontend/src/views/: AdminView.vue  AuthView.vue  FavoritesView.vue  HomeView.vue  MovieDetailView.vue  MoviesView.vue  ProfileTicketsView.vue  ProfileView.vue  SearchView.vue
